@@ -8,7 +8,7 @@
     <include package="plone.supermodel" />
     <include package="plone.rfc822" />
     <include package="plone.z3cform" />
-
+    
     <include package=".browser" />
     <include package=".fti" />
     
